--- a/src/style/scss/_input.scss
+++ b/src/style/scss/_input.scss
@@ -53,7 +53,12 @@
       color: #aaa;
     }
      :-ms-input-placeholder {
-      text-transform: uppercase !important;
+      text-transform: uppercase;
+      font-size: 0.8em;
+      font-weight: 700;
+      letter-spacing: 0.1em;
+      vertical-align: middle;
+      color: #aaa;
        /* IE11 sadly requires all these !important flags */
     }
     textarea::placeholder {
